# sonar-tk

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  setup.py
audio_ui/: __init__.py  state.py  state_machine.py  window.py
audio_ui/elements/: __init__.py  button.py  checkbox.py  element.py  menu.py  menu_bar.py  text_box.py  text_label.py  toggle_button.py
audio_ui/screens/: container_screen.py  dialog.py  screen.py
audio_ui/utils/: __init__.py  audio_manager.py  key_handler.py  speech_manager.py
examples/: example1.py  example_window.py
src/: main.py  main.spec  state.py  state_machine.py  window.py
src/accessible_output2/outputs/: voiceover.py
src/audio_ui/: __init__.py  window.py
src/audio_ui/elements/: __init__.py  button.py  checkbox.py  element.py  grid.py  menu.py  menu_bar.py  text_box.py  text_label.py  toggle_button.py
src/audio_ui/screens/: __init__.py  container_screen.py  dialog.py  screen.py
src/audio_ui/utils/: __init__.py  key_handler.py  speech_manager.py  state.py  state_machine.py
src/elements/: __init__.py  button.py  checkbox.py  element.py  menu.py  menu_bar.py  text_box.py  text_label.py  toggle_button.py
src/examples/: example1.py
src/screens/: __init__.py  container_screen.py  dialog.py  screen.py
src/ui/elements/: __init__.py  button.py  checkbox.py  element.py  menu.py  text_box.py  toggle_button.py
src/ui/windows/: __init__.py  container_tab.py  dialog.py  tab.py  window.py
src/utils/: __init__.py  audio_manager.py  key_handler.py  speech_manager.py
test/: test_state_machine.py  test_window.py
test/mocks/: appscript.py  mock_pyglet_window.py  mock_state.py
test/utils/: test_key_handler (1).py  test_key_handler.py  test_speech_manager.py
tests/: TestWindow.py  manual_test.py  test.py  test_state.py  test_state_machine.py  test_window.py
