[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["src/examples"]

[project]
name = "audio_ui"
authors = [
    {name = "Timothy Breitenfeldt", email = "timothyjb310@gmail.com"},
]
readme = "README.md"
version = "0.1.2"
description = "A library for creating screen reader only user interfaces using Pyglet."
requires-python = ">=3.10"
keywords = ["development", "accessibility", "screen reader", "audio UI"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "accessible_output2",
    "pyglet",
    "pyperclip",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
]
lint = [
    "flake8",
    "Flake8-pyproject",
    "black",
]

[project.urls]
repository = "https://github.com/tbreitenfeldt/audio_ui"
bugtracker = "https://github.com/tbreitenfeldt/audio_ui/issues"

[tool.black]
line-length = 79
include = "\\.pyi?$"
exclude = """
/(
    /.git
  | /.hg
  | /.mypy_cache
  | /.tox
  | /.venv
  | _build
  | buck-out
  | build
  | dist
)/
"""

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 79
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]