[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "audio_ui"
authors = [
    {name = "Timothy Breitenfeldt", email = "timothyjb310@gmail.com"},
]
readme = "README.md"
version = "0.1.2"
description = "A library for creating screen reader only user interfaces using Pyglet."
requires-python = ">=3.11"
keywords = ["development", "accessibility", "screen reader", "audio UI"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "accessible_output2",
    "pyglet",
    "pyperclip",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
]
dev = [
    "flake8",
    "black",
    "isort",
    "pre-commit",
]

[project.urls]
repository = "https://github.com/tbreitenfeldt/audio_ui"
bugtracker = "https://github.com/tbreitenfeldt/audio_ui/issues"

[tool.black]
target-version = ['py311']
line-length = 79
include = "\\.pyi?$"
exclude = """
/(
    /.git
  | /.hg
  | /.mypy_cache
  | /.tox
  | /.venv
  | _build
  | buck-out
  | build
  | dist
)/
"""

[tool.isort]
profile = "black"
multi_line_output = 3